# ai-bio-discovery

./: .gitignore  .python-version  AGENTS.md  CURRENT_STATE.md  DECISIONS.md  EXPERIMENT_LOG.md  Makefile  README.md  ROADMAP.md  pyproject.toml
data/: README.md
experiments/001_perturbation_prediction/: DATASET_ADAMSON.md  README.md  WALKTHROUGH_01.md
papers/: README.md
scripts/: check_adamson_quality.py  check_environment.py  create_adamson_walkthrough.py  inspect_h5ad.py
tests/: test_environment.py
