[project]
name = "ai-bio-discovery"
version = "0.1.0"
description = "Reproducible experiments in AI-driven biological discovery"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anndata>=0.12",
    "jupyterlab>=4",
    "matplotlib>=3.10",
    "numpy>=2.2",
    "pandas>=2.2",
    "scanpy>=1.11",
    "scikit-learn>=1.6",
    "scipy>=1.15",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

